--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 
 body {
     font-family: sans-serif;
+    background: #E5E5E5;
 }
 
 .header {
@@ -76,7 +77,11 @@ body {
 }
 
 .user-avatar {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
     margin-right: 8px;
+    object-fit: cover;
 }
 
 .user-name {
@@ -90,6 +95,24 @@ body {
     display: flex;
     align-items: center;
     margin-left: 17px;
+    position: relative;
+}
+
+.notification {
+    width: 20px;
+    height: 20px;
+    display: flex;
+    position: absolute;
+    justify-content: center;
+    background: #F5222D;
+    border: 1px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 16px;
+    font-size: 14px;
+    align-items: center;
+    color: #FFFFFF;
+    top: -10px;
+    right: -12px;
 }
 
 .icons-panel {
@@ -97,12 +120,12 @@ body {
     align-items: center;
 }
 
-.icon-link:nth-child(3):after {
+.icon-link:nth-child(4):before {
     content: "";
     width: 1px;
     height: 16px;
     background: #003A8C;
-    margin-left: 12px;
+    margin-right: 12px;
 }
 
 .header-icon {
@@ -111,4 +134,163 @@ body {
 
 .header-icon:hover {
     fill: white;
+}
+
+.container {
+    display: flex;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.menu-sidebar {
+    max-width: 192px;
+    margin-top: 18px;
+    margin-right: 12px;
+}
+
+.menu-sidebar .user {
+    padding-left: 10px;
+}
+
+.menu-sidebar .user-avatar {
+    width: 24px;
+    height: 24px;
+}
+
+.menu-sidebar .user-name {
+    font-weight: normal;
+    color: #262626;
+    font-size: 14px;
+    line-height: 22px;
+}
+
+.nav-group {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 12px;
+    margin-bottom: 24px;
+}
+
+.nav-icon {
+    margin-right: 8px;
+}
+
+.nav-link {
+    border-radius: 4px;
+    padding:  4px 8px;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 22px;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #595959;
+}
+
+.nav-link.active {
+    background: white;
+    color: #262626;
+    font-weight: 600;
+}
+
+.nav-title {
+    font-weight: 600px;
+    font-size: 12px;
+    line-height: 20px;
+    color: #262626;
+    padding-left: 10px;
+    margin-bottom: 4px;
+    margin-top: 0;
+}
+
+.see-more {
+    padding:  4px 8px;
+    font-weight: normal;
+    margin-top: 3px;
+    font-size: 14px;
+    line-height: 22px;
+    color: #1890FF;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    padding-left: 12px;
+}
+
+.see-more-icon {
+    margin-right: 12px;
+}
+
+.main-feed {
+    margin-top: 18px;
+    min-width: 588px;
+    flex-grow: 1;
+}
+
+.create-post {
+    background: #FFFFFF;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;width: 588px;
+}
+
+.create-post .header {
+    padding: 9px 16px;
+    background: #F5F5F5;
+}
+
+.create-post-title {
+    margin: 0;
+    color: #595959;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 22px;
+}
+
+.create-post .body {
+    padding: 16px 16px 24px 16px;
+    display: flex;
+    align-items: flex-start;
+}
+
+.create-post-input {
+    padding-top: 8px;
+    font-size: 16px;
+    line-height: 24px;
+    color: #8C8C8C;
+    width: 92%;    
+    border: none;
+    word-wrap: break-word;
+}
+
+.create-post .footer {
+    padding: 0 16px 16px 16px;
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+.create-post .footer:before {
+    content: "";
+    width: 100%;
+    height: 1px;
+    background: #E8E8E8;
+    margin-bottom: 16px;
+}
+
+.tag {
+    background: #F5F5F5;
+    border-radius: 48px;
+    border: none;
+    padding: 9px 12px;
+    display: flex;
+    align-items: center;
+    margin-right: 8px;
+}
+
+.tag-icon {
+    margin-right: 8px;
+}
+
+.dropdawn-icon {
+    margin: 0;
 }
