--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ body {
 
 .main-feed {
     margin-top: 18px;
-    min-width: 588px;
+    max-width: 588px;
     flex-grow: 1;
 }
 
@@ -293,4 +293,135 @@ body {
 
 .dropdawn-icon {
     margin: 0;
+}
+
+.post {
+    background: #FFFFFF;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    margin: 16px 0;
+    padding: 16px;
+}
+
+.post-header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 16px;
+}
+
+.post-header-button {
+    background-color: #FFFFFF;
+    border: none;
+}
+
+.post-header .user-avatar {
+    width: 48px;
+    height: 48px;
+    margin-right: 12px;
+}
+
+.post-header .user {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.post-info {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.post-author {
+    width: 100%;
+    text-decoration: none;
+    font-size: 14px;
+    line-height: 22px;
+    color: #0050B3;
+    font-weight: 600;
+}
+
+.post-time {
+    font-size: 14px;
+    line-height: 22px;
+    color: #8C8C8C;
+}
+
+.post-time:after {
+    display: inline-block;
+    content: "";
+    width: 4px;
+    height: 4px;
+    background-color: #bfbfbf;
+    border-radius: 50%;
+    margin: 0 6px;
+    vertical-align: middle;
+}
+
+.post-info-time {
+    display: flex;
+    align-items: center;
+}
+
+.post-text {
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 22px;
+    color: #595959;
+    margin-bottom: 16px;
+}
+
+.post-text a {
+    color: #096dd9;
+    text-decoration: none;
+}
+
+.post-image {
+    border: 1px solid #bfbfbf;
+    border-radius: 4px;
+    max-width: 100%;
+}
+
+.likes {
+    margin: 9px 0;
+    display: flex;
+    align-items: center;
+}
+
+.likes-counter {
+    font-size: 14px;
+    line-height: 22px;
+    color: #595959;
+    margin-left: 4px;
+}
+
+.post-footer {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.post-button {
+    background-color: #FFFFFF;
+    border: none;
+    display: flex;
+    align-items: center;
+}
+
+.post-button-text {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22px;
+    color: #595959;
+    margin-left: 8px;
+}
+
+.post-button-icon {
+    fill: #595959;
+}
+
+.post-footer:before {
+    content: "";
+    width: 100%;
+    height: 1px;
+    background: #E8E8E8;
+    margin-bottom: 16px;
 }
